Fixed projects grid row wrapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     position: relative;
     width: 100%;
     height: fit-content;
-    background-color: #100c08;
+    background-color: #281f1581;
     margin:0 auto;
     padding-bottom: 100px;
 }
