--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -5,17 +5,21 @@
     display: grid;
     // margin: 10% 10% 10% 10%;
     padding-top: 10%;
-    padding-left: 10%;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
-    grid-column-gap: 20%;
-    grid-row-gap: 20%;
-    justify-content: center;
+    padding-right: 10%;
+    // grid-template-columns: 1.0fr 1.0fr;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,
+           minmax(max(200px,(750px - (2 - 1)*150px)/2), 1fr));
+    grid-template-rows: 1fr 1fr;
+    gap: 150px;
+    margin: 0 auto;
 
     img:hover { transform: scale(1.25); }
 
     .projectGif {
         width: 100%;
         height: 100%;
+        max-width: 375px;
         margin: 0 auto;
     
         transform-style: preserve-3d;
